# selective-attention

./: .gitignore  README.md  flake.nix  justfile  main.py  pyproject.toml  shell.nix
configs/: default.yaml  template.py
src/: dataset.py  trainer.py
src/datasets/: __init__.py  shakespear.py
src/model/: __init__.py  attention.py  decoder.py  decoder_only.py  encoder.py  mha.py  model.py  rope.py
