[project]
name = "Cubeformer"
version = "0.0.1"
description = "Why not?"
authors = [
    {name = "Pierrot LC", email = "pierrotlc@proton.me"},
]
dependencies = [
    "jax[cpu]>=0.4.26",
    "equinox>=0.11.3",
    "optax>=0.2.2",
    "jaxtyping>=0.2.28",
    "beartype>=0.18.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.ruff]
src = ["src"]
