[project]
name = "Cubeformer"
version = "0.0.1"
description = "Why not?"
authors = [
    {name = "Pierrot LC", email = "pierrotlc@proton.me"},
]
dependencies = [
    "beartype>=0.18.2",
    "equinox>=0.11.3",
    "hydra-core>=1.3.2",
    "jax[cpu]>=0.4.26",
    "jaxtyping>=0.2.28",
    "optax>=0.2.2",
    "tqdm>=4.66.2",
    "wandb>=0.16.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.ruff]
src = ["src"]
