[project]
name = "Selective Attention Transformer"
version = "0.0.1"
description = "Why not?"
authors = [
    {name = "Pierrot LC", email = "pierrotlc@proton.me"},
]
dependencies = [
    "beartype>=0.18.2",
    "einops>=0.7.0",
    "equinox>=0.11.3",
    "hydra-core>=1.3.2",
    "jax[cuda12_pip]>=0.4.26",
    "jaxtyping>=0.2.28",
    "optax>=0.2.2",
    "tqdm>=4.66.2",
    "wandb>=0.16.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[[tool.pdm.source]]
type = "find_links"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
name = "jax"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["F722"]  # Jaxtype will throw false positives.
